@@ -1,5 +1,6 @@
 //Main Includes
 #include "QC_Stellaris.h"
+#include "GPIO/QC_GPIO.h"
 #include "I2C/QC_I2C.h"
 #include "I2C/BMP085/QC_BMP085.h"
 #include "I2C/HMC5883L/QC_HMC5883L.h"
@@ -8,11 +9,13 @@
 
 int main(void)
 {
-	SysCtlClockSet(SYSCTL_SYSDIV_5|SYSCTL_USE_PLL|SYSCTL_XTAL_16MHZ|SYSCTL_OSC_MAIN);	//Set processor at 40MHz
-	FPUEnable();	//Enable FPU
+	ROM_FPUEnable();
+	ROM_FPUStackingEnable();
+
+	ROM_SysCtlClockSet(SYSCTL_SYSDIV_5|SYSCTL_USE_PLL|SYSCTL_XTAL_16MHZ|SYSCTL_OSC_MAIN);	//Set processor at 40MHz
 	QC_GPIO_Init();
 	i2c_Config();	//Configure I2C0 Master
-//	bmp085_ReadCoeffs();
+	bmp085_ReadCoeffs();
 
 
 //Debug
@@ -23,8 +26,8 @@ int main(void)
 //	l3g4200d_DataConfig(STREAM_MODE, BIG_ENDIAN, DPS500);
 	while(1)
 	{
-		//		bmp085_GetData(&BMP085.Temperature, &BMP085.Pressure);
-		//		bmp085_CAltitude(&BMP085.Altitude);
+				bmp085_GetData(&BMP085.Temperature, &BMP085.Pressure);
+				bmp085_CAltitude(&BMP085.Altitude);
 		//		l3g4200d_ReadCalcXYZ(&L3G4200D.x, &L3G4200D.y, &L3G4200D.z);
 		//		l3g4200d_ReadTemp(&L3G4200D.Temperature);
 		//		hmc5883l_ReadXYZ(&HMC5883L.x, &HMC5883L.y, &HMC5883L.z);	//Read compass data
